Changelog for faqMan.

faqMan 1.0.0
==============
- Initial release.