@@ -1,7 +1,6 @@
 --------------------
 faqMan
 --------------------
-Version: 1.0.0
 Author: Josh Tambunga <josh+faqman@joshsmind.com>
 --------------------
 
@@ -9,3 +8,12 @@ An FAQ Manager for MODx Revolution.
 
 Feel free to suggest ideas/improvements/bugs on GitHub:
 http://github.com/josht/faqMan/issues
+
+
+
+--------------------
+Copyright Information
+
+faqMan is distributed as GPL (as MODx Revolution is). faqMan was built using the
+handy modExtra (https://github.com/splittingred/modExtra)
+created by splittingred(Shaun McCormick).
